# xgc2-robot-wheeltec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  check_package_compliance.sh  package_debs.sh  xgc2_artifact_manifest.py
docs/: productization-status.md
launch/: wheeltec_robot.launch
onboard/ros1/src/bringup/wheeltec_onboard_bringup/: CMakeLists.txt  package.xml
onboard/ros1/src/bringup/wheeltec_onboard_bringup/launch/: wheeltec_onboard.launch
onboard/ros1/src/communication/wheeltec_swarm_ros_bridge/: CMakeLists.txt  package.xml
onboard/ros1/src/communication/wheeltec_swarm_ros_bridge/config/: ros_topics.yaml
onboard/ros1/src/communication/wheeltec_swarm_ros_bridge/launch/: wheeltec_swarm_ros_bridge.launch
scripts/: install_wheeltec_controller_udev_rule.sh
udev/: 99-xgc2-wheeltec-controller.rules
