<?xml version="1.0"?>
<package format="2">
  <name>turn_on_wheeltec_robot</name>
  <version>0.1.0</version>
  <description>XGC2 packaging and supported chassis launch for the Wheeltec ROS 1 serial driver.</description>

  <maintainer email="apt@example.com">XGC2</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>roslaunch</exec_depend>
</package>
