<?xml version="1.0"?>
<package format="2">
  <name>wheeltec_onboard_bringup</name>
  <version>0.1.0</version>
  <description>Minimal XGC2 Wheeltec ROS 1 chassis and swarm bridge bringup.</description>

  <maintainer email="apt@example.com">XGC2</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>turn_on_wheeltec_robot</exec_depend>
  <exec_depend>wheeltec_swarm_ros_bridge</exec_depend>
</package>
