<?xml version="1.0"?>
<package format="2">
  <name>wheeltec_swarm_ros_bridge</name>
  <version>0.1.0</version>
  <description>Wheeltec-specific configuration and launch wrapper for swarm_ros_bridge.</description>

  <maintainer email="apt@example.com">XGC2</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>swarm_ros_bridge</exec_depend>
</package>
